Apply fix for bug#45131, "Problems building on 32-bit linux".

As described in the bug, the problem is not new in 5.4, but newly tickled.
We need a register whose lower 8 bits can be accessed, and must request
such from the assembler.  Using a "q" constraint instead of "r" constraint
accomplishes this.